<resources>
    <string name="app_name">SAM</string>
    <string name="app_description_name">Sistema de Alce Manual</string>
    <string name="action_settings">Settings</string>

    <string name="accion_buscar">Search</string>
    <string name="accion_nuevo">Add</string>

    <string name="name">Nombre</string>
    <string name="date">Fecha</string>
    <string name="period">Período</string>
    <string name="map_number">No. Map</string>
    <string name="map_number_before">NMP</string>

    <string name="farm">Finca</string>
    <string name="cane">Cañial</string>
    <string name="batch">Lote</string>
    <string name="line">Linea</string>
    <string name="map">Mapa Corte</string>
    <string name="tractor">Tractor</string>
    <string name="select_bluetooth_device">Selc. Printer</string>
    <string name="bk_database">Exportar BD</string>
    <string name="up_database">Importar BD</string>

    <string name="syncSuccess">Sincronizado</string>
    <string name="sync_name">Sincronizar Tablas</string>

    <string name="cutting_title_fragment">Parametros Generales</string>

    <!-- ======================== Menu ================================= -->
    <string name="unplugged">Desconectado</string>
    <string name="plugged">Connectado</string>
    <!-- ================================================================= -->

    <!-- ======================== Drawer ================================= -->
    <string name="raise">Uñadas</string>
    <string name="weight">Peso</string>

    <string name="openDrawer">opening drawer component</string>
    <string name="closeDrawer">closing drawer component</string>
    <!-- ================================================================= -->

    <!-- ======================== Drawer Menu ============================ -->
    <string name="switch_user">Cambiar Usuario</string>
    <string name="work_title">Mapa de Corte</string>
    <string name="work">Digitación</string>

    <string name="reports">Reportes</string>
    <string name="cutter">Cortador</string>
    <string name="place">Lugar Corte</string>

    <string name="settings">Configuraciones</string>

    <string name="sync_title">Sincronizar</string>
    <string name="client">Cliente</string>
    <string name="server">Servidor</string>

    <string name="logout">Salir</string>
    <!-- ================================================================= -->

    <!-- ========================= Data Base ============================= -->
    <string name="db_name">production</string>
    <string name="db_version">2</string>
    <!-- ================================================================= -->

    <!-- ========================== Setting ============================== -->
    <string name="uri_server">Dirección Del Servidor</string>
    <string name="uri1">Servidor 1</string>
    <string name="uri2">Servidor 2</string>

    <string name="server_execute">Sincronizar Servidor</string>
    <string name="auto_execute">Ejecutar Automaticamente</string>
    <string name="interval">Tiempo de sincronización</string>
    <!-- ================================================================= -->

    <!-- ========================== Login ================================ -->
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>

    <string name="login_success">Login Exitoso!!!</string>
    <string name="login_reject">Ususario o Contraseña Incorrecto</string>
    <!-- ================================================================= -->

    <!-- Required Fields -->
    <string name="required_fields">Debe indicar la informacion para el campo </string>
    <string name="data_base_parameter_title">Parametros Generales</string>

    <string name="cutter_report">Reporte de Cortadores</string>

    <!-- DEFAULT DATE FORMAT-->
    <string name="default_date_format">yyyy-MM-dd</string>
    <string name="mobile_setting_title">Parametros del Dispositivo</string>
    
    <!-- Progrees bar message from import and export database-->
    <string name="updateProgressImportTitle">Realizando el import</string>
    <string name="updateProgressExportTitle">Realizando el export</string>

</resources>
