<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <ImageView
            android:src="@drawable/ic_launcher"
            android:layout_width="50dp"
            android:layout_height="49dp"
            android:scaleType="center"
            android:background="#00FFAB33"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Consorcio Azucarero Central"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="4dp"
            android:textColor="#99000036"/>
    </LinearLayout>
    <EditText
        android:id="@+id/dialig_username"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/dialog_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:singleLine="true"/>
</LinearLayout>